[#72461190] Fixed the alignment of the project title, floated left.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -118,8 +118,10 @@ footer {
 }
 
 .project-title {
-  padding-top: 10px;
-  height: 50px
+  padding-top: 15px;
+  height: 50px;
+  text-align: left;
+  padding-left: 20px;
 }
 
 #create-projects {
